--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,7 +2,7 @@
   background-color: var(--navbar-bg);
   position: fixed !important;
   width: 100%;
-  top: 25px;
+  top: 0px;
   left: 0;
   z-index: 1000;
   box-shadow: 2px 2px 5px var(--button-bg);
@@ -49,7 +49,7 @@ navbar__search:focus-visible {
   height: 88vh;
   overflow-y: auto;
   position: fixed;
-  top: 30px;
+  top: 0px;
 }
 .sidebar__title {
   font-size: 1.25rem;
